# MetaTag

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  install_qt.bat  installer.nsi  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  python.yml
docs/: native_build.md
metatag/core/: __init__.py  config.py
metatag/import_io/: __init__.py  csv_io.py  itunes_sync.py  musicbee_sync.py
metatag/online/: audnexus_lookup.py  cover_finder.py  discogs_lookup.py  musicbrainz_lookup.py
metatag/tests/: conftest.py
metatag/tests/integration/: test_main_window.py  test_regex_dialog.py
metatag/tests/unit/core/: test_track.py
metatag/tests/unit/import_io/: test_csv_io.py  test_itunes_sync.py  test_musicbee_sync.py
metatag/tests/unit/online/: test_musicbrainz_lookup.py
metatag/tests/unit/utils/: test_regex_utils.py  test_rename_utils.py  test_string_utils.py
metatag/ui/: about_dialog.py  discogs_dialog.py  main_window.py  regex_dialog.py  rename_dialog.py  settings_dialog.py
metatag/ui/dialogs/: audiobook_lookup_dialog.py  pick_release_dialog.py
metatag/ui/models/: track_model.py
metatag/utils/: file_utils.py  patterns.py  regex_utils.py  rename_utils.py  string_utils.py
python/: .gitignore  LICENSE  README.md  installer.nsi  pyproject.toml  pytest.ini
python/metatag/: __init__.py  __main__.py
python/metatag/core/: config.py  track.py  undo.py
python/metatag/core/export/: exporter.py
python/metatag/online/: __init__.py  audnexus_lookup.py  cover_finder.py  musicbrainz_lookup.py
python/metatag/tests/integration/: test_rename_dialog.py
python/metatag/tests/unit/online/: test_cover_finder.py  test_discogs_lookup.py
python/metatag/tests/unit/utils/: test_file_utils.py
python/metatag/ui/: about_dialog.py  main_window.py  settings_dialog.py
python/metatag/ui/dialogs/: audiobook_lookup_dialog.py  bulk_edit_dialog.py  pattern_dialogs.py
python/metatag/ui/models/: track_model.py
python/metatag/ui/widgets/: audio_player.py
python/metatag/utils/: file_utils.py  patterns.py
src/core/: CMakeLists.txt  tag_reader.cpp  track.cpp
src/core/include/: tag_reader.h  track.h
src/import/: CMakeLists.txt  csv_import.cpp  itunes_sync.cpp
src/import/include/: csv_import.h  itunes_sync.h
src/online/: CMakeLists.txt  cover_finder.cpp  musicbrainz_lookup.cpp
src/online/include/: cover_finder.h  musicbrainz_lookup.h
src/ui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/utils/: CMakeLists.txt  file_utils.cpp  regex_utils.cpp  string_utils.cpp
src/utils/include/: file_utils.h  regex_utils.h  string_utils.h
tests/: CMakeLists.txt  main.cpp  test_track.cpp
